[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
data = { path = "../data" }
bevy_scene = { path = "../bevy_scene" }
ui_panels = { path = "../ui_panels" }

bevy = { workspace = true }
bevy_egui = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }

bevy_fontmesh = "0.6.0"
bevy-inspector-egui = "0.37.0"