[package]
name = "scene_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
data = { path = "../data" }
bevy_panorbit_camera = "0.35.0"
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.15.0"
bevy_asset_loader = "0.27.0"
serde = { workspace = true }
serde_json = { workspace = true }
procedural_modelling = { version = "0.5.0", features = ["bevy"] }
bevy_procedural_meshes = "0.19.0"
bevy_fontmesh = "0.6.0"
bevy-inspector-egui = "0.37.0"
bevy_egui = { workspace = true }
bevy_common_assets = { version = "0.17.0", features = ["json"] }
bevy_render = "0.19.0"
bevy_asset = "0.19.0"

# For wasm32 build (needed for gh_pages) we must un-feature audio.
# instead of default we specify which features we need
bevy = { version = "0.19", default-features = false, features = [
    "3d",
    "bevy_picking",
    "bevy_state",
    "jpeg",
] }
# dynamic_linking speeds up compile times. It can not be used in wasm32 builds.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.19", features = ["dynamic_linking"] }

# allows us to remove loading text
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }

[dev-dependencies]
rand = "0.10.2"


