[package]
name = "ui_panels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
data = { path = "../data" }
egui = { workspace = true }
#eframe = { version = "0.35.0", features = ["persistence"] }
# Tied to efame version
eframe = { version = "0.34", features = ["persistence"] }
log = "0.4.33"
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.76"
web-sys = "0.3.70"